--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- Initiate app -->
 	<div class="container-fluid" ng-app="myApp" ng-controller="myCtrl">
 		<div class="row">
-			<div class="col-md-6"> 
+			<div class="col-md-6" id="left"> 
 				<!-- Form -->
 				<form class="container" name="songForm">
 					<div class="form-group">
@@ -34,24 +34,29 @@
 				</form>
 				
 				<!-- Results -->
-				<div class="container-fixed">
+				<div class="container-fluid">
 					<div class="help-block">
 						<span ng-show="tracks.length>0">Click to sample</span>
 						<span ng-show="currentSong && !audioObject.paused">(playing)</span>
 					</div>
 					<ul>
-						<li ng-repeat="track in tracks" class="" ng-click="play(track.preview_url); artistInfo(track)" title="{{track.name}}">{{track.name + ', by ' + track.artists[0].name}}</li>
+						<li ng-repeat="track in tracks" class="songs" ng-click="play(track.preview_url); artistInfo(track); relatedArtists();" title="{{track.name}}">{{track.name + ', by ' + track.artists[0].name}}</li>
 					</ul>			
 				</div>
 			</div>
-			<div class="col-md-6"> 
-				<div id="profile">
-					<h5>Artists</h5>
+			<div class="col-md-6" ng-show="clicked"> 
+				<div id="profile" >
+					<h2>Artists</h2>
 					<ul id="artistList">
-						<li ng-repeat="artist in artists">{{artist.name}}</li>
+						<!--<li ng-repeat="artist in artists">{{artist.name}} <div class="artistImage"><img ng-src="{{image}}"></div></li> -->
 					</ul>
 				</div>
 			</div>
+		</div>
+
+		<div id="explore" class="container-fluid" ng-show="clicked"> 
+			<h1 id="exploreHeader"> Explore </h1>
+			<h4> <i> Related Artists</i> </h4>
 		</div>
 	</div>
 </body>
