--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
+<!-- George Ng
+	 Info 343 C
+
+	 This is the html index page for the spotify based web app that allows for a user to search for song information, sample songs,
+	 and find related artists to a song's artist. -->
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Spotify Template</title>
+	<title>Spotify Song and Artist Reference</title>
 	
 	<!-- Include libraries -->
 	<script src="https://code.jquery.com/jquery.min.js"></script>
@@ -20,44 +26,63 @@
 <body>
 	<!-- Initiate app -->
 	<div class="container-fluid" ng-app="myApp" ng-controller="myCtrl">
+
+		<!-- Divide divs into two main columns -->
 		<div class="row">
 			<div class="col-md-6" id="left"> 
-				<!-- Form -->
-				<form class="container" name="songForm">
+
+				<!-- Form for searching, minimum input length of 2 and maximum of 99-->
+				<form class="container" name="songForm" novalidate>
 					<div class="form-group">
-						<label>Spotify search:</label>
-						<input name="search" placeholder="Enter your search.." ng-model="track" class="form-control"></input>
+						<div ng-class="{'has-error':songForm.search.$dirty && songForm.search.$invalid}"class="form-group">
+							<label>Spotify search:</label>
+							<input name="search" placeholder="Enter your search.." ng-model="track" 
+								class="form-control" ng-minlength="2" ng-maxlength="99"></input>
+							<p ng-show="songForm.search.$error.minlength || songForm.search.$error.maxlength" 
+								class="help-block">Field must be between 1 to 100 characters.</p>
+						</div>
 					</div>
 					<div class="form-group">
-						<button ng-disabled="songForm.search.$invalid" class="btn btn-primary" ng-click="getSongs()" type="submit">Submit</button>
+						<button ng-disabled="songForm.search.$invalid" class="btn btn-primary" 
+								ng-click="getSongs()" type="submit">Submit</button>
 					</div>
 				</form>
 				
-				<!-- Results -->
+				<!-- Results, allows for songs to be sampled -->
 				<div class="container-fluid">
 					<div class="help-block">
 						<span ng-show="tracks.length>0">Click to sample</span>
 						<span ng-show="currentSong && !audioObject.paused">(playing)</span>
 					</div>
 					<ul>
-						<li ng-repeat="track in tracks" class="songs" ng-click="play(track.preview_url); artistInfo(track); relatedArtists();" title="{{track.name}}">{{track.name + ', by ' + track.artists[0].name}}</li>
+						<li ng-repeat="track in tracks" class="songs" ng-click="play(track.preview_url); 
+						artistInfo(track); relatedArtists();" 
+						title="{{track.name}}">{{track.name + ', by ' + track.artists[0].name}}</li>
 					</ul>			
 				</div>
 			</div>
+
+			<!-- Shows upon clicking a song to sample, displays song and artist information.-->
 			<div class="col-md-6" ng-show="clicked"> 
 				<div id="profile" >
-					<h2>Artists</h2>
+					<h2>{{song.name}}<h2>
+					<img ng-src = "{{song.album.images[1].url}}">
+					<a href="{{song.album.external_urls.spotify}}" target="_blank"><img id="spotify" src="spotify.png"></a>
+					<h3> Popularity : {{song.popularity}}% </h3>
+					<h3>Artists : </h3>
 					<ul id="artistList">
-						<!--<li ng-repeat="artist in artists">{{artist.name}} <div class="artistImage"><img ng-src="{{image}}"></div></li> -->
+						<li ng-repeat="artist in artists" class="name" ng-click="getRelated(data)">{{artist.name}}</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 
+		<!-- This div populates with related artists after the song's artist is clicked. -->
 		<div id="explore" class="container-fluid" ng-show="clicked"> 
 			<h1 id="exploreHeader"> Explore </h1>
 			<h4> <i> Related Artists</i> </h4>
-			<h5 ng-repeat="artist in artists">{{artist.name}}<img ng-src="{{artist.images[2].url}}"></h5> 
+			<h5 class="relatedNames" ng-repeat="artist in related.artists">{{artist.name}}<img 
+				class="relatedImages" ng-src="{{artist.images[1].url}}"></h5> 
 		</div>
 	</div>
 </body>
